--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,4 +10,6 @@ dependencies = [
     "numpy>=2.3.4",
     "opencv-python>=4.11.0.86",
     "pandas>=2.3.3",
+    "scikit-learn>=1.7.2",
+    "tensorflow>=2.20.0",
 ]
